# agentforge

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.insurance.yml  docker-compose.langfuse.yml  docker-compose.qdrant.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentforge/: __init__.py  cli.py  config.py
agentforge/agents/: __init__.py  checkpoint.py  graph.py  nodes.py  state.py  tools.py
agentforge/api/: __init__.py  approvals.py  auth.py  evals.py  main.py  schemas.py  tenancy.py
agentforge/guardrails/: __init__.py  pii.py  tool_scope.py
agentforge/llm/: __init__.py  provider.py
agentforge/observability/: __init__.py  metrics.py  tracing.py
agentforge/rag/: __init__.py  catalog.py  chunking.py  ingest.py  retriever.py  store.py
apps/console/: Dockerfile  README.md  angular.json  default.conf.template  nginx.conf  package.json  tsconfig.json
apps/console/src/: index.html  styles.css
apps/console/src/app/: agent.service.ts  app.component.ts  app.routes.ts  approvals.component.ts  (+5 more)
db/: init.sql
deploy/: README.md
deploy/k8s/: api.yaml  config.yaml  console.yaml  ingest-job.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  secret.example.yaml
docs/: OBSERVABILITY.md  SMOKE_TEST.md
evals/: dataset.jsonl  run_evals.py
examples/: README.md
examples/banking-compliance/: config.yaml
examples/banking-compliance/corpus/: aml-kyc-policy.md  product-sheet-savings.md
examples/insurance-support/: README.md  config.yaml  evals.jsonl
examples/insurance-support/corpus/: auto-policy-coverage.md  claims-process.md  fraud-and-escalation.md
tests/: conftest.py  fakes.py  test_approvals.py  test_auth.py  test_catalog.py  test_checkpoint.py  test_chunking.py  test_evals_report.py  test_examples.py  test_graph_flow.py  test_guardrails.py  test_hitl_approval.py  test_kb_isolation.py  test_metrics.py  test_observability.py  test_pii_flow.py  test_store_backend.py  test_supervisor.py  test_tenancy.py
(+1 files in other folders)
