[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "0.1.0.dev0"
description = "Self-hostable, full-stack platform for production-grade agentic-RAG applications."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "gridatek" }]
keywords = ["langchain", "langgraph", "rag", "agents", "llm", "fastapi"]

dependencies = [
  # --- Agent / LLM orchestration (LangChain 1.0 / LangGraph 1.0) ---
  "langchain>=1.0,<2.0",
  "langchain-text-splitters>=0.3",
  "langgraph>=1.0,<2.0",
  # Durable checkpointer (HITL + resume survive restarts / work across replicas).
  "langgraph-checkpoint-postgres>=2.0",
  "psycopg-pool>=3.2",
  "langchain-anthropic>=0.3",
  "langchain-openai>=0.2",
  "langchain-ollama>=0.2",
  # --- RAG: vector store over Postgres + pgvector ---
  "langchain-postgres>=0.0.12",
  "psycopg[binary]>=3.1",
  "pgvector>=0.3",
  # --- API gateway ---
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  # --- Config / utils ---
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  # --- Observability (LangSmith default; Langfuse optional via extras) ---
  "langsmith>=0.1",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
# Fully self-hosted observability backend.
langfuse = ["langfuse>=2.0"]
# Local embeddings (sentence-transformers) — avoids any external embedding API.
local-embeddings = ["langchain-huggingface>=0.1", "sentence-transformers>=3.0"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "httpx>=0.27",
]

[project.scripts]
agentforge = "agentforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]
